# win32-test-app

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md
src/: app.rc  defer_window_pos.h  left_panel.h  main.cpp  main_window.h  resource.h  splitter_base.h  splitter_horizontal.h  splitter_vertical.h  tab_page_richtext.h  tab_page_webview.h
src/wrappers/: richedit.h  tabctrl.h  webview.h
submodules/: CMakeLists.txt
